Fix research column vertical alignment on desktop

--- a/css/custom.css
+++ b/css/custom.css
@@ -111,7 +111,6 @@ sup {
 
 .column {
     flex: 0 1 auto;
-    margin: auto;
 }
 
 .vertical-align {
@@ -283,9 +282,9 @@ sup {
 
 
 
-/* ------------------------------ */
-/* ========== RESEARCH ========== */
-/* ------------------------------ */
+/* ---------------------------- */
+/* ========== CONTACT ========= */
+/* ---------------------------- */
 
 #contact a {
     margin: 0;
